--- a/estilo.css
+++ b/estilo.css
@@ -16,20 +16,19 @@ body{
 }
 
 .imagenLogo{
-    align-items: center;
-    text-align: center;
+   text-align: center;
 }
 
 h1 {
-    background-color: rgb(80, 80, 77);
+    background-color: rgb(122, 122, 118);
     text-align: center;
-    font-size: 50px;
-    border: 2px solid rgb(255, 255, 255);
+    font-size: 80px;
+    border: 2px solid #ffffff;
     border-radius: 8px;
  }   
 
 h2 {
-    background-color: rgb(68, 4, 4);
+    background-color: rgb(255, 255, 255);
     text-align: center;
     font-size: 35px;
     border: 2px solid gainsboro;
@@ -37,14 +36,13 @@ h2 {
 
 section {
     background-color: rgb(9, 27, 87);
-    text-decoration-line: overline;
     text-align: justify;
     font-size: 25px;
     border-color: rgb(150, 104, 104);
 }
 
 .tituloInicio{
-    background-color: rgb(102, 100, 100);
+    background-color: rgb(172, 165, 165);
     text-align: center;
     font-size: 29px;
     font-style: italic;
@@ -52,13 +50,53 @@ section {
 }
 
 #subtituloInicio {
-    color: rgb(23, 26, 70);
+    color: rgb(92, 98, 194);
     text-align: center;
     font-style: oblique;
     font-size: 33px;
-    background-color: darkslategrey;
+    background-color: rgb(2, 66, 66);
 }
 
 footer {
-    background-color: rgb(32, 31, 56);
+    background-color: rgb(126, 125, 125);
+}
+
+.barraPrincipal{
+    display: flex;
+    list-style: disc;
+    font-size: 25px;
+    border-style: groove;
+    border-color: black;
+}
+
+.navegadorItem{
+    display: inline;
+    flex-shrink: 1;
+    gap: 1rem;
+    justify-content: space-evenly;
+}
+
+.navegadorItem:hover{
+    background-color: rgb(255, 255, 255);
+}
+
+.barraPrincipal{
+    background-color: rgb(102, 101, 101);
+    height: 75px;
+}
+
+.testimonial-grid{
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    border-color: black;
+    border-style: outset;
+    background-color: dimgrey;
+}
+
+.Somos-grid{
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    border-style: double;
 }
